<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    tools:context=".fragment.FaqPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/question_1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/answer_1"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/question_2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/answer_2"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/question_3"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/answer_3"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/question_4"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/answer_4"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/question_5"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/answer_5"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/question_6"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/answer_6"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/question_7"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/answer_6"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="10dp"/>


    </LinearLayout>


</ScrollView>