<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/imgloginlogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/foodiction_logo" />

    <EditText
        android:id="@+id/etphonenumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/imgloginlogo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_box"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textSize="18sp"
        android:drawableLeft="@drawable/ic_smartphone"
        android:drawablePadding="5dp"/>

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etphonenumber"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_box"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textSize="18sp"
        android:drawableLeft="@drawable/ic_lockx"
        android:drawablePadding="5dp"/>

    <Button
        android:id="@+id/btlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etpassword"
        android:layout_margin="20dp"
        android:background="@drawable/buttons"
        android:padding="6dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtforgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btlogin"
        android:layout_centerHorizontal="true"
        android:padding="6dp"
        android:text="@string/forgot_password"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        />

    <TextView
        android:id="@+id/txtregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:padding="6dp"
        android:text="@string/new_register"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"/>

    
</RelativeLayout>