<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imgforgotpasswordlogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/foodiction_logo" />

    <TextView
        android:id="@+id/txtforgotpassworddetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_forgot_password"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/etforgotpasswordphonenumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_box"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textSize="18sp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/ic_smartphone"/>

    <EditText
        android:id="@+id/etforgotpasswordemail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_box"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="6dp"
        android:textSize="18sp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/ic_email"/>

    <Button
        android:id="@+id/btnext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/buttons"
        android:padding="6dp"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>