<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfilePageFragment"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imgProfilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_profile_white"/>


    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_box"
        android:textSize="18sp"
        android:drawablePadding="5dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtPhNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_box"
        android:textSize="18sp"
        android:drawablePadding="5dp"
        android:text="@string/mobile_number"
        android:textAlignment="center"
        android:gravity="center"/>
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_box"
        android:textSize="18sp"
        android:drawablePadding="5dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_box"
        android:textSize="18sp"
        android:drawablePadding="5dp"
        android:text="@string/delivery_address"
        android:textAlignment="center"
        android:gravity="center"/>

</LinearLayout>