<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txtresetpassworddetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_box"
        android:hint="OTP(4 characters)"
        android:inputType="number"
        android:maxLines="1"
        android:padding="6dp"
        android:textSize="18sp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/ic_smartphone"/>

    <EditText
        android:id="@+id/etResetPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_box"
        android:hint="@string/reset_password_new"
        android:inputType="textPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textSize="18sp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/ic_lockx"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_box"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textSize="18sp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/ic_lockx"/>



    <Button
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/buttons"
        android:padding="6dp"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>